RESOLVED FIXED302758
Fix linked-on-or-after check for using process assertions off the main thread
https://bugs.webkit.org/show_bug.cgi?id=302758
Summary Fix linked-on-or-after check for using process assertions off the main thread
Ben Nham
Reported 2025-11-18 19:36:34 PST
See PR
Attachments
Ben Nham
Comment 1 2025-11-18 19:36:35 PST
Ben Nham
Comment 2 2025-11-18 19:40:27 PST
EWS
Comment 3 2025-11-19 10:11:33 PST
Committed 303266@main (838b2391f4ce): <https://commits.webkit.org/303266@main> Reviewed commits have been landed. Closing PR #54155 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.